# edgetx

./: .gitmodules  CMakeLists.txt  pinout.xlsx
companion/src/firmwares/: moduledata.cpp  moduledata.h
companion/src/firmwares/edgetx/: yaml_moduledata.cpp
radio/src/: CMakeLists.txt  audio.cpp  audio.h  cli.cpp  dataconstants.h  datastructs.h  datastructs_private.h  debug.cpp  debug.h  keys.h  logs.cpp  lv_conf.h  main.cpp  mixer.cpp  model_init.cpp  myeeprom.h  opentx.cpp  opentx.h  opentx_types.h  options.h  rtc.cpp  rtos.c  rtos.h  serial.cpp  simu.cpp  switches.cpp  syscalls.c  tasks.cpp  tasks.h  translations.h
radio/src/bitmaps/480x272/: CMakeLists.txt
radio/src/gui/: gui_common.cpp
radio/src/gui/128x64/: gui.h  menus.h  model_flightmodes.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  radio_calibration.cpp  radio_diagkeys.cpp  radio_setup.cpp  view_main.cpp  view_statistics.cpp  widgets.cpp
radio/src/gui/212x64/: model_setup.cpp
radio/src/gui/colorlcd/: CMakeLists.txt  LvglWrapper.cpp  colors.h  draw_functions.cpp  lcd.cpp  menu_radio.cpp  model_curves.cpp  model_select.cpp  module_setup.cpp  preflight_checks.cpp  radio_diaganas.cpp  radio_diagkeys.cpp  radio_sdmanager.cpp  radio_wifi.cpp  radio_wifi.h  screen_setup.cpp  special_functions.cpp  topbar.cpp  topbar.h  view_logical_switches.cpp  view_main.cpp  view_main.h  widget.cpp  widget.h  widgets_container.h
radio/src/gui/colorlcd/layouts/: layout_factory_impl.h  topbar_impl.cpp  topbar_impl.h
radio/src/gui/common/stdlcd/: model_curves.cpp  popups.cpp  radio_hardware.cpp  radio_sdmanager.cpp  radio_version.cpp
radio/src/gui/navigation/: common.cpp
radio/src/hal/: adc_driver.cpp  adc_driver.h  module_driver.h
radio/src/io/: multi_protolist.cpp  multi_protolist.h
radio/src/lua/: CMakeLists.txt  api_general.cpp  interface.cpp  lua_api.h  lua_widget.cpp  widgets.cpp
radio/src/pulses/: crossfire.cpp  modules_constants.h  modules_helpers.h  multi.cpp  ppm.cpp  pulses.cpp
radio/src/storage/: sdcard_yaml.cpp  storage.h
radio/src/storage/yaml/: CMakeLists.txt  yaml_datastructs.cpp  yaml_datastructs_funcs.cpp  yaml_datastructs_muffin_colorlcd.cpp  yaml_labelslist.cpp
radio/src/targets/common/arm/stm32/: stm32_hal_adc.cpp
radio/src/targets/muffin/: CMakeLists.txt  FreeRTOS_entry.h  adc_ads1115_driver.cpp  adc_hal_driver.cpp  aux_serial_driver.cpp  backlight_driver.cpp  board.cpp  board.h  diskio.cpp  esp32_rmt_pulse.h  esp32_rmt_pulse_driver.cpp  esp32_rmt_uart.cpp  esp_ble_powerup.c  extmodule_driver.cpp  extmodule_driver.h  flyskyHallStick_driver.cpp  hal.h  i2c_driver.cpp  i2c_driver.h  intmodule_serial_driver.cpp  intmodule_serial_driver.h  keys_driver.cpp  lcd_lvgl_esp.cpp  ldscript.ld  led_driver.cpp  mixer_scheduler_driver.cpp  pulses_bt_powerup.cpp  pulses_esp32.h  pulses_espnow.cpp  pwr_driver.cpp  rtc_driver.cpp  sh1107.cpp  sh1107.h  sound_i2s.cpp  telemetry_driver.cpp  timers_driver.cpp  timers_driver.h  top_lcd_driver.cpp  trainer_driver.cpp  usb_charger_driver.cpp
radio/src/targets/muffin/ftp-server/: WiFi.c  WiFi.h  ftp.c  initWiFi.cpp  network.h
radio/src/targets/muffin/ota_server/: ota_server.c
radio/src/targets/simu/: opentxsimulator.cpp  simpgmspace.cpp
radio/src/targets/wrover/: CMakeLists.txt  FreeRTOS_entry.h  adc_hal_driver.cpp  aux_serial_driver.cpp  aux_serial_driver.h  backlight_driver.cpp  board.cpp  board.h  diskio.cpp  esp32_rmt_pulse.h  esp32_rmt_pulse_driver.cpp  esp32_rmt_uart.cpp  flyskyHallStick_driver.cpp  hal.h  haptic_driver.cpp  intmodule_pulses_driver.cpp  intmodule_serial_driver.cpp  keys_driver.cpp  lcd_lvgl_esp.cpp  mixer_scheduler_driver.cpp  oled_feather_wing_driver.cpp  pulses_bt_powerup.cpp  pulses_espnow.cpp  pwr_driver.cpp  rtc_driver.cpp  sound_i2s.cpp  timers_driver.cpp  top_lcd_driver.cpp  trainer_driver.cpp  usb_charger_driver.cpp
radio/src/targets/wrover/ftp-server/: WiFi.c  ftp.c  initWiFi.cpp
radio/src/telemetry/: frsky.h  multi.cpp  telemetry.cpp  telemetry_sensors.h
radio/src/tests/: conversions.cpp  functions.cpp  lcd.cpp  mixer.cpp  switches.cpp
radio/src/translations/: cn.h  cz.h  da.h  de.h  en.h  es.h  fi.h  fr.h  it.h  jp.h  nl.h  pl.h  pt.h  se.h  tw.h  untranslated.h
